--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">TuConcordiaputito</a>
+              <a class="navbar-brand" href="#">TuConcordia</a>
 
               <form class="d-flex" role="search">
                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
